Fixed: sidebar top alignment in rental pages

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2519,6 +2519,10 @@ input#startDate2 {
 
 /*== Sidebar CSS Here ==*/
 
+.sidebar-content-wrap {
+    margin-top: 68px;
+}
+
 .single-sidebar {
     /* -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3); */
